--- a/ht.html
+++ b/ht.html
@@ -4,23 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script> 
-    function reload(){
-            fetch("/hello.json").
-            then(response => response.text()).
-            then(data => {
-                document.getElementById("yo").innerHTML = data;
-                console.log(data)
-            });
-                
-    }
-    function unload(){
-        fetch("/hello.json", {
-                method: "POST",
-                headers: {'Content-Type': 'application/json'},
-                body: JSON.stringify({"Send":1})
-            });
-    }
+    <script src = "ht.js"> 
     </script>
 </head>
 <body>
